<resources>
    <string name="app_name">Studienarbeit21</string>
    <string name="latest_sensor_data">Latest Sensor Data</string>
    <string name="studienarbeit_21">Studienarbeit 21</string>
    <string name="firedetection_returns">Firedetection returns:</string>
    <string name="door_is">Door is:</string>
    <string name="humidity_in">Humidity in %</string>
    <string name="temperature_in_c">Temperature in °C</string>
    <string name="starting_value">no data availible</string>
    <string name="fire_active">ACTIVE FIRE</string>
    <string name="fire_inactive">No active fire</string>
    <string name="door_open">OPEN</string>
    <string name="door_closed">Closed</string>

</resources>